--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 	<footer>
 		<p><strong>black+white</strong> themes via <a href="http://themeforest.net">Themeforest</a></p>
-		<p><strong>by:</strong>		Jean-Christian katungulu</p>
+		<p><strong>by:</strong>		Jean-Christian Katungulu</p>
 	</footer>
 </div> <!-- end container -->
 
